Closed Bug 1839106 Opened 2 years ago Closed 2 years ago

Crash in [@ nsMsgAccountManager::OnFolderRemoved]

Categories

(Thunderbird :: General, defect)

Thunderbird 115
Unspecified
Windows 10
defect

Tracking

(thunderbird115+ verified)

RESOLVED FIXED
116 Branch
Tracking Status
thunderbird115 + verified

People

(Reporter: wsmwk, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: crash, regression, regressionwindow-wanted)

Crash Data

Attachments

(1 file)

crashes began with 115.0b2. This is one of them - Crash report: https://crash-stats.mozilla.org/report/index/d360fb83-3dbc-451d-ae29-cec3e0230615

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  nsMsgAccountManager::OnFolderRemoved  mailnews/base/src/nsMsgAccountManager.cpp:3182
1  xul.dll  nsMsgMailSession::OnFolderRemoved  mailnews/base/src/nsMsgMailSession.cpp:149
2  xul.dll  nsMsgDBFolder::NotifyFolderRemoved  mailnews/base/src/nsMsgDBFolder.cpp:4677
3  xul.dll  nsMsgDBFolder::RecursiveDelete  mailnews/base/src/nsMsgDBFolder.cpp:3477
4  xul.dll  nsMsgDBFolder::PropagateDelete  mailnews/base/src/nsMsgDBFolder.cpp:3431
5  xul.dll  nsMsgLocalMailFolder::Rename  mailnews/local/src/nsLocalMailFolder.cpp:773
6  xul.dll  XPTC__InvokebyIndex  
7  xul.dll  CallMethodHelper::Invoke  js/xpconnect/src/XPCWrappedNative.cpp:1627
7  xul.dll  CallMethodHelper::Call  js/xpconnect/src/XPCWrappedNative.cpp:1180
7  xul.dll  XPCWrappedNative::CallMethod  js/xpconnect/src/XPCWrappedNative.cpp:1126

bp-083304ae-034c-4028-90f7-a6a4d0230617 is 115.0b2

Flags: needinfo?(mkmelin+mozilla)
Assignee: nobody → geoff
Status: NEW → ASSIGNED

Okay, I'm saying it is bug 1837137. But I could be barking up the wrong tree here.

Flags: needinfo?(mkmelin+mozilla)
Regressed by: 1837137

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/a546ae01f2f0
Use reference counting pointer when deleting folders. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch

Thanks for the patch.
Looking at crash-stats, we will only be able to determine the effectiveness of the patch after uplifting to beta.

Comment on attachment 9340407 [details]
Bug 1839106 - Use reference counting pointer when deleting folders. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 1837137
User impact if declined: crash when deleting folders
Testing completed (on c-c, etc.): just landed
Risk to taking this patch (and alternatives if risky): no

Attachment #9340407 - Flags: approval-comm-beta?

Comment on attachment 9340407 [details]
Bug 1839106 - Use reference counting pointer when deleting folders. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9340407 - Flags: approval-comm-beta? → approval-comm-beta+

Verified, crash is gone starting with 115.0b5

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: