Bug 1839106 - Use reference counting pointer when deleting folders. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D181705

--HG--
extra : rebase_source : c9291b9763b1dd6af865e6869bedd9534a4c6204